Finsihed for the day. Lots of progress. - Make sure all Noto Sans is replaced with verdana or montserrat - make sure all images for each page are updated - ensure all links are working - Start the next couple workGroups - try and counter the offset from the contact page transition after submitting contact form - try and fix the FONTS when testing on iOS. I dunno if i can tho, reading about lots of similar problems with other folks' projects. * next tasks that i can think of. Check the other sheet. Good work today

--- a/src/Components/Collections/Contact/ContactBody.module.css
+++ b/src/Components/Collections/Contact/ContactBody.module.css
@@ -198,7 +198,7 @@
         justify-content: center;
         border-radius: 10px;
         background: var(--Text-Normal, #111);
-        color: #FFF;
+        color: #f0f0f0;
         font-family: "Verdana";
         font-size: 14px;
         font-style: normal;
@@ -239,7 +239,7 @@
         align-self: stretch;
         color: #4B4B4B;
         text-align: center;
-        font-family: "Noto Sans";
+        font-family: "Verdana";
         font-size: 16px;
         font-style: normal;
         font-weight: 400;
@@ -493,7 +493,7 @@
             align-self: stretch;
             color: #4B4B4B;
             text-align: center;
-            font-family: "Noto Sans";
+            font-family: "Verdana";
             font-size: 16px;
             font-style: normal;
             font-weight: 400;
@@ -741,7 +741,7 @@
             align-self: stretch;
             color: #4B4B4B;
             text-align: center;
-            font-family: "Noto Sans";
+            font-family: "Verdana";
             font-size: 16px;
             font-style: normal;
             font-weight: 400;
@@ -757,7 +757,7 @@
         .contactedHomeButton {
             display: flex;
             height: 44px;
-            padding: 15px 44px 15px 37px;
+            padding: 15px 44px 15px 44px;
             align-items: center;
             border-radius: 10px;
             border: 1px solid #E4E5DA;
@@ -767,5 +767,6 @@
             font-style: normal;
             font-weight: 400;
             line-height: 100%; /* 14px */
+            background-color: transparent;
         }
 }
